<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  基本信息 -->
    <string name="app_name">赚钱大师</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_tab_message">消息</string>
    <string name="bottom_tab_my">我</string>
    <string name="can_not_callphone">您的设备不能打电话</string>
    <string name="str_dialog_title">提示</string> 
    <string name="str_dialog_ok">确定</string>

    <!-- 我页面 -->
    <string name="transpond_task_record">转发任务记录</string>
    <string name="accept_apprentice_record">收徒记录</string>
    <string name="withdraw_deposit_record">提现记录</string>
    <string name="my_income">我的收入</string>
    <string name="my_gold">我的金币</string>
    <string name="setting">设置</string>
    <string name="my_integral">我的积分</string>
    
    <!-- 软件更新 -->
    <string name="str_update_msg_version">当前版本:%s</string>
    <string name="str_add_features">新增功能：%s</string>
    <string name="str_update_msg">发现新版本:%s</string>
    <string name="str_update_title">软件更新</string>
    <string name="str_update">立即更新</string>
    <string name="str_no_update">下次再说</string>
    <string name="str_out_off_app">退出应用</string>
    <string name="dialog_hint_title">温馨提示</string>
    
    <!--绑定手机号页面 -->
    <string name="binding_mobile">绑定手机号</string>
    <string name="current_binding_mobile">当前已绑定手机号：</string>
    <string name="gain_voice_verification_code">获取语音验证码</string>
    <string name="verification_binding_mobile">验证后绑定手机</string>
    <string name="input_mobile">输入手机号</string>
    <string name="input_verification_code">输入验证码</string>

</resources>