<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_base"
    android:orientation="vertical" >

    <com.zqds.client.ui.view.TitleBar
        android:id="@+id/titlebar"
        style="@style/Titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_binding_mobile" 
             android:textSize="@dimen/text_size_medium"
             android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13556862441" 
            android:textSize="@dimen/text_size_medium"
             android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp" 
        android:background="@color/white">

        <EditText
            android:id="@+id/et_input_mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height_50"
            android:background="@null"
            android:hint="@string/input_mobile"
            android:textColor="@color/et_hint" 
            android:textColorHint="@color/et_hint"
            android:textSize="@dimen/text_size_medium"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height_50" 
            >

            <EditText
                android:id="@+id/et_input_verification_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/tv_gain_verification_code"
                android:background="@null"
                android:hint="@string/input_verification_code"
                android:textColor="@color/et_hint" 
                android:textColorHint="@color/et_hint"
                android:textSize="@dimen/text_size_medium"/>

            <TextView
                android:id="@+id/tv_gain_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:padding="5dp"
                android:text="@string/gain_voice_verification_code" 
                android:background="@drawable/btn_bg_seletor"
                android:textColor="@color/white" 
                />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_bg_seletor"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/verification_binding_mobile"
        android:textColor="@color/white" 
        android:textSize="@dimen/text_size_medium"
       />

</LinearLayout>