<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_base"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rly_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/tv_head_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:contentDescription="@null"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_head_icon"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/tv_head_icon"
                android:text="转身遇到他"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_head_icon"
                android:layout_alignLeft="@+id/tv_nickname"
                android:layout_marginBottom="2dp"
                android:text="ID:90120762"
                android:textColor="@color/c_787778"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/list_item_angle_right" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/iv_transpond_task"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/icon_forward" />

                <TextView
                    android:id="@+id/tv_transpond_task_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_transpond_task"
                    android:text="@string/transpond_task_record"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_17" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/list_item_angle_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="55dp"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/iv_accept_apprentice"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/icon_friends" />

                <TextView
                    android:id="@+id/tv_accept_apprentice_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_accept_apprentice"
                    android:text="@string/accept_apprentice_record"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_17" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/list_item_angle_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="55dp"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/iv_withdraw_deposit"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/icon_exchange" />

                <TextView
                    android:id="@+id/tv_withdraw_deposit_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_withdraw_deposit"
                    android:text="@string/withdraw_deposit_record"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_17" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/list_item_angle_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/iv_income"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/icon_income" />

                <TextView
                    android:id="@+id/tv_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_income"
                    android:text="@string/my_income"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_17" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/list_item_angle_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="55dp"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/iv_gold"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/icon_gold" />

                <TextView
                    android:id="@+id/tv_gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_gold"
                    android:text="@string/my_gold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_17" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/list_item_angle_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="55dp"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/iv_integral"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/icon_exchange" />

                <TextView
                    android:id="@+id/tv_integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_integral"
                    android:text="@string/my_integral"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_17" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/list_item_angle_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/icon_settings" />

                <TextView
                    android:id="@+id/tv_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_setting"
                    android:text="@string/setting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_17" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/list_item_angle_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>